-m "editing text to some of the paragraphs"

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <div id="about">
           <h2>Learn a bit about me</h2>
           <div>
-              <p>Thanks for sticking around! I am a software engineer and(sometimes) UX/UI designer with a bachelors degree from Western Govenors University in Software Engineering. I am well versed in creative web design as well as application infrastructure, and digital animated storylines. I am also certified in leading teams as Scrum Master and Product Manager. 
-                I’ve always loved coding and creating logical and unique designs for as long as I can remember. I’m always learning about and searching for new and innovative design inspiration and  technology.  
+              <p>Thanks for sticking around! I am a software & cloud engineer and(sometimes) UX/UI designer with a bachelors degree from Western Govenors University in Software Engineering. I am well versed in creative web design as well as application infrastructure, and cloud computing. I am also certified in leading teams as Scrum Master and Product Manager. 
+                I’ve always loved coding and creating logical and unique designs for as long as I can remember. I’m always learning about and searching for new and innovative technological inspiration.  
                 In my free time, most days I spend my time sitting in front of my laptop writing my book, hiking, blogging or editing audio for my podcast. I also love to catch up on a good k-drama to binge. </p>
           </div>
         <div class="container px-4 py-5" id="icon-grid">
           <h2 class="pb-2 border-bottom">Icon grid</h2>
-          <p>My key skillsets include: Scripting and programming, web development, mobile application development, UX/UI design and software quality assurance.</p>
+          <p>My key skillsets include: Scripting and programming, web development, mobile application development, UX/UI design, AWS and cloud computing.</p>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
             <div class="col d-flex align-items-start">
               <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
@@ -183,13 +183,13 @@
         </div>
         <div id="contact">
             <h2>Let's Work Together!</h2>
-            <p>If you’d like to request my resume or would like to send me some kdrama recommendations, just shoot me a message at tatwona.mcguire@gmail.com</p>
+            <p>If you’d like to request my resume or would like to send me some K-drama recommendations, just shoot me a message at tatwona.mcguire@gmail.com</p>
         </div>
         <div>
           <div class="px-4 py-5 my-5 text-center">
             <h1 class="display-5 fw-bold text-body-emphasis">Let's Work Together!</h1>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">If you’d like to request my resume or would like to send me some kdrama recommendations, just shoot me a message at tatwona.mcguire@gmail.com.</p>
+              <p class="lead mb-4">If you’d like to request my resume or would like to send me some K-drama recommendations, just shoot me a message at tatwona.mcguire@gmail.com.</p>
             </div>
           </div>
           <div class="container">
